<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">kc-android</string>
	<string name="action_settings">Settings</string>
	<string name="hello_world">Hello world!</string>
    <string name="label_login">用户名</string>
    <string name="label_password">密码</string>
    <string name="sign_in">登录</string>
    <string name="tutorials">教程</string>
    <string name="knowledge_net">知识点</string>
    <item type="id" name="adapter_item_tag" />


    <string name="knowledge_net_section">属于知识网络</string>
    <string name="tutorial_section">相关教程</string>
    <string name="tutorial_related_knowledge_net">相关知识点：</string>
    <string name="read_next_step">查看下一步</string>
    <string name="user_info">用户信息</string>
    <string name="all_classes">所有课程</string>
    <string name="my_classes">我的课程</string>
    <string name="my_difficulties">我的难点</string>
    <string name="my_questions">我的问题</string>
    <string name="my_notes">我的笔记</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="notes_edit_text_hint">填写要记录的内容</string>
    <string name="create_notes">创建笔记</string>

    <string name="ic_home">&#xf015;</string>
    <string name="ic_book">&#xf02d;</string>
    <string name="ic_bookmark">&#xf02e;</string>
    <string name="ic_clock">&#xf017;</string>
    <string name="ic_my_note">&#xf14b;</string>
    <string name="ic_info">&#xf05a;</string>
    <string name="ic_question">&#xf059;</string>
    <string name="ic_note">&#xf044;</string>
    <string name="ic_menu">&#xf0c9;</string>
    <string name="ic_search">&#xf002;</string>
    <string name="ic_round">&#xf10c;</string>

    <string name="fontawesome_back">&#xf053;</string>
    <string name="fontawesome_next">&#xf054;</string>
    <string name="fontawesome_count">&#xf02d;</string>
    <string name="fontawesome_checkmark">&#xf00c;</string>
    <string name="fontawesome_smile">&#xf118;</string>
    <string name="fontawesome_note_square">&#xf14b;</string>
    <string name="fontawesome_hard_point">&#xf02e;</string>
    <string name="fontawesome_sign_out">&#xf08b; 用户登出</string>
    <string name="edit_notes">编辑笔记</string>
    <string name="delete_notes">删除笔记</string>
    <string name="create_question">创建问题</string>
    <string name="delete_question">删除问题</string>
    <string name="question_edit_text_hint">在这里提出问题</string>
    <string name="edit_question">编辑问题</string>
</resources>
