<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <include layout="@layout/title_bar"/>

        <FrameLayout
                android:id="@+id/frame_layout_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/left_drawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:orientation="vertical"
            android:background="@drawable/menu_background"
            >
        <com.mindpin.kc_android.widget.SelectableLinearLayout
                style="@style/MenuLine"
                android:id="@+id/sll_user_info"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_user_avatar"
                    android:src="@drawable/avatar_default"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"/>

            <TextView style="@style/MenuLineTV"
                      android:id="@+id/tv_user_name"
                    />
        </com.mindpin.kc_android.widget.SelectableLinearLayout>
        <com.mindpin.kc_android.widget.SelectableLinearLayout
                style="@style/MenuLine"
                android:id="@+id/sll_all_classes"
                >
            <com.mindpin.kc_android.widget.FontAwesomeTextView
                    android:text="@string/ic_home"
                    style="@style/MenuLineFATV"/>
            <TextView style="@style/MenuLineTV"
                      android:text="@string/all_classes"/>
        </com.mindpin.kc_android.widget.SelectableLinearLayout>
        <com.mindpin.kc_android.widget.SelectableLinearLayout
                style="@style/MenuLine"
                android:id="@+id/sll_my_classes"
                >
            <com.mindpin.kc_android.widget.FontAwesomeTextView
                    style="@style/MenuLineFATV"
                    android:text="@string/ic_book"
                    />
            <TextView style="@style/MenuLineTV"
                      android:text="@string/my_classes"/>
        </com.mindpin.kc_android.widget.SelectableLinearLayout>
        <com.mindpin.kc_android.widget.SelectableLinearLayout
                style="@style/MenuLine"
                android:id="@+id/sll_my_difficulties"
                >
            <com.mindpin.kc_android.widget.FontAwesomeTextView
                    style="@style/MenuLineFATV"
                    android:text="@string/ic_info"
                    />
            <TextView style="@style/MenuLineTV"
                      android:text="@string/my_difficulties"/>
        </com.mindpin.kc_android.widget.SelectableLinearLayout>
        <com.mindpin.kc_android.widget.SelectableLinearLayout
                style="@style/MenuLine"
                android:id="@+id/sll_my_questions"
                >
            <com.mindpin.kc_android.widget.FontAwesomeTextView
                    style="@style/MenuLineFATV"
                    android:text="@string/ic_question"
                    />
            <TextView android:text="@string/my_questions"
                      style="@style/MenuLineTV"/>
        </com.mindpin.kc_android.widget.SelectableLinearLayout>
        <com.mindpin.kc_android.widget.SelectableLinearLayout
                style="@style/MenuLine"
                android:id="@+id/sll_my_notes"
                >
            <com.mindpin.kc_android.widget.FontAwesomeTextView
                    style="@style/MenuLineFATV"
                    android:text="@string/ic_note"
                    />
            <TextView android:text="@string/my_notes"
                      style="@style/MenuLineTV"/>
        </com.mindpin.kc_android.widget.SelectableLinearLayout>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>